--- a/xmas-sweater/index.html
+++ b/xmas-sweater/index.html
@@ -13,11 +13,11 @@
 <body>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
       <!--a class="navbar-brand" href="#">Navbar</a-->
 
-      <div class="navbar-brand">
+      <div class="navbar-brand ">
         <img src="imgs/site-title.png" alt="" class="grandeTitolo">
       </div>
 
@@ -27,13 +27,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link text-light" href="#">Link</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
             <ul class="dropdown-menu">
@@ -44,9 +44,6 @@
               </li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -89,7 +86,7 @@
   </div>
 
   <!-- titolo vetrina 2 -->
-  <h2 class="text-center">Fresher</h2>
+  <h2 class="text-center text-light">Fresher</h2>
 
 
 
