--- a/xmas-sweater/index.html
+++ b/xmas-sweater/index.html
@@ -132,7 +132,7 @@
   <footer class="white-section" id="footer">
     <div class="container-fluid text-center">
 
-      <p class="copyright">© Copyright 2022 Xmas Sweater </p>
+      <p class="copyright text-light">© Copyright 2022 Xmas Sweater </p>
     </div>
   </footer>
 
